Complete project documentation